advance in timeline and proyect section

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,22 +4,21 @@ import ExperienceItem from "./ExperienceItem.astro";
 const Experiencie = [
   {
     date: "Enero 2024-Actualidad",
-    title: "Analista Programador en COSAVAL",
+    title: "Analista Programador - COSAVAL",
     description:
-      "Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.",
-    
+      "Desarrollo de aplicaciones en Java, .NET y PHP, además de gestión de bases de datos en SQL Server.",
   },
   {
     date: "Abril 2023-Febrero 2024",
-    title: "Ingeniero de Software de INGELMECO",
+    title: "Ingeniero de Software - INGELMECO",
     description:
-      "Desarrollo de software para la gestión interna de la empresa , además del desarrollo de la pagina web de la empresa en la cual se muestra los servicios que se ofrecen y los proyectos realizados y productos que se venden.",
+      "Desarrollo de software para la gestión interna de la empresa , además del desarrollo de la pagina web de la empresa, utilizando tecnologías como Java, React , Next.JS y Firebase.",
     link: "https://ingelmeco.com/",
   },
 ];
 ---
 
-<ol class="relative border-s border-gray-200 dark:border-gray-700">
+<ol class="relative border-s border-gray-200 dark:border-gray-700 ml-3">
   {
     Experiencie.map((experience) => (
       <li class="mb-10 ms-4">
