--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,11 @@
-<header class="flex justify-center items-center py-5 w-[1120px] mx-auto">
+<header class="flex justify-center items-center py-5 w-full xl:w-[1120px] mx-auto">
   <span></span>
-    <nav class="flex flex-row gap-x-10 opacity-80">
-        <a href="/">About</a>
-        <a href="/">Projects</a>
-        <a href="/">Contact</a>
-    </nav>
+  <nav class="flex flex-row gap-x-10 opacity-80">
+    <a href="#top">Inicio </a>
+    <a href="#sobre-mi">Sobre Mí </a>
+    <a href="#experiencia">Experiencia</a>
+
+    <a href="#proyectos">Proyectos</a>
+    <a href="#contacto">Contacto</a>
+  </nav>
 </header>
