--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,54 +7,73 @@ import SocialPill from "../components/icons/SocialPill.astro";
 import MailIcon from "../components/icons/Mail.astro";
 import Experience from "../components/Experience.astro";
 import SectionContainer from "../components/SectionContainer.astro";
+import Briefcase from "../components/icons/Briefcase.astro";
+import Proyect from "../components/icons/Project.astro";
+import Projects from "../components/Projects.astro";
 ---
 
 <!-- Hacer traductor -->
 <Layout title="Portfolio de Alex Galo - Desarrollador y Programador">
-  <main>
-    <SectionContainer class="py-44 pb-24">
+  <main class="px-4">
+    <SectionContainer class="py-20 pb-22" >
       <img
         src="https://avatars.githubusercontent.com/u/53360939?v=4?s=400"
         alt="myphoto"
-        class="rounded-full size-12"
+        class="rounded-full size-12 mb-4"
       />
       <h1
-        class="text-white text-5xl font-bold flex justify-center flex-row gap-x-4 pb-10"
+        class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex justify-center flex-row gap-x-4 pb-6 lg:pb-10"
       >
         Soy Alex Galo
         <div class="flex justify-center items-center">
-          <Badge>Disponible para Trabajar</Badge>
+          <Badge>No Disponible para Trabajar</Badge>
         </div>
       </h1>
-      <h2 class="text-1xl opacity-80">
+      <h2 class="text-xl lg:text-1xl text-wrap max-w-[700px]">
         <span>
-          Desarrollador de Software hondureño con +1.5 años de experiencia</span
-        > actualmente trabajando como Analista Programador , graduado Cum Laude de
-        Ingenieria en Sistemas en la UNAH y con un alto nivel de Inglés. <br />
-        Trabajo con distintas herramientas tales como React, Next.JS, Astro , Java
-        , Node , Docker y SQL.
+          Desarrollador de Software hondureño con +1.5 años de experiencia,</span
+        > graduado con honores
+        de Ingenieria en Sistemas en la UNAH y con un alto nivel de Inglés. <br
+        />
+        Trabajo con distintas herramientas tales como React, Next.JS, Astro, Java, Node, Docker y SQL.
       </h2>
-      <nav class="flex gap-x-4 mt-10">
+      <nav class="flex gap-4 mt-8 flex-wrap">
         <SocialPill
           href="https://www.linkedin.com/in/alex-daniel-galo-8a4673213/"
         >
-          <LinkedInIcon class="w-6 h-6" />
+          <LinkedInIcon class="size-4 md:size-6" />
           LinkedIn
         </SocialPill>
         <SocialPill href="https://github.com/AlexGalo0">
-          <GithubIcon class="w-6 h-6" />
+          <GithubIcon class="size-4 md:size-6" />
           Github
         </SocialPill>
         <SocialPill href="https://github.com/AlexGalo0">
-          <MailIcon class="w-6 h-6" />
+          <MailIcon class="size-4 md:size-6" />
           alexgalo246@gmail.com
         </SocialPill>
       </nav>
+      
     </SectionContainer>
+    <div class="space-y-24">
+    <SectionContainer id="experiencia">
+      <h2 class="text-2xl semi-bold mb-6 flex gap-x-3 items-center">
+        <Briefcase class="size-8" />
+        Experiencia Laboral
+      </h2>
 
-    <SectionContainer>
-      <h2 class="text-2xl semi-bold mb-6">Experiencia Laboral</h2>
       <Experience />
     </SectionContainer>
+
+
+    <SectionContainer id="proyectos">
+      <h2 class="text-2xl semi-bold mb-6 flex gap-x-3 items-center">
+       <Proyect class="size-7" />
+        Proyectos
+      </h2>
+
+    <Projects />
+    </SectionContainer>
+  </div>
   </main>
 </Layout>
