--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,25 @@
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <p>© 2018 <a href="http://www.technext.it" target="_blank">Technext</a> - P.IVA 123456789</p>
-            </div>
-        </div>
-    </div>
+---
+const currentYear = new Date().getFullYear();
+---
+
+<footer
+  class="opacity-80 m-4 mt-16 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex justify-center"
+>
+  <div
+    class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4"
+  >
+    <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
+      >© {currentYear}
+      <span class="">Alex Galo</span>
+    </span>
+    <ul
+      class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
+    >
+      <a
+        id="contacto"
+        href="mailto:alexgalo246@gmail.com"
+        class="hover:underline">Email</a
+      >
+    </ul>
+  </div>
 </footer>
