--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Projects from "../components/Projects.astro";
 <!-- Hacer traductor -->
 <Layout title="Portfolio de Alex Galo - Desarrollador y Programador">
   <main class="px-4">
-    <SectionContainer class="py-20 pb-22" >
+    <SectionContainer class="py-20 pb-22">
       <img
         src="https://avatars.githubusercontent.com/u/53360939?v=4?s=400"
         alt="myphoto"
@@ -32,10 +32,10 @@ import Projects from "../components/Projects.astro";
       <h2 class="text-xl lg:text-1xl text-wrap max-w-[700px]">
         <span>
           Desarrollador de Software hondureño con +1.5 años de experiencia,</span
-        > graduado con honores
-        de Ingenieria en Sistemas en la UNAH y con un alto nivel de Inglés. <br
-        />
-        Trabajo con distintas herramientas tales como React, Next.JS, Astro, Java, Node, Docker y SQL.
+        > graduado con honores de Ingenieria en Sistemas en la UNAH y con un alto
+        nivel de Inglés. <br />
+        Trabajo con distintas herramientas tales como React, Next.JS, Astro, Java,
+        Node, Docker y SQL.
       </h2>
       <nav class="flex gap-4 mt-8 flex-wrap">
         <SocialPill
@@ -53,27 +53,25 @@ import Projects from "../components/Projects.astro";
           alexgalo246@gmail.com
         </SocialPill>
       </nav>
-      
     </SectionContainer>
     <div class="space-y-24">
-    <SectionContainer id="experiencia">
-      <h2 class="text-2xl semi-bold mb-6 flex gap-x-3 items-center">
-        <Briefcase class="size-8" />
-        Experiencia Laboral
-      </h2>
+      <SectionContainer id="experiencia">
+        <h2 class="text-2xl semi-bold mb-6 flex gap-x-3 items-center">
+          <Briefcase class="size-8" />
+          Experiencia Laboral
+        </h2>
 
-      <Experience />
-    </SectionContainer>
+        <Experience />
+      </SectionContainer>
 
+      <SectionContainer id="proyectos">
+        <h2 class="text-2xl semi-bold mb-6 flex gap-x-3 items-center">
+          <Proyect class="size-12" />
+          Proyectos
+        </h2>
 
-    <SectionContainer id="proyectos">
-      <h2 class="text-2xl semi-bold mb-6 flex gap-x-3 items-center">
-       <Proyect class="size-7" />
-        Proyectos
-      </h2>
-
-    <Projects />
-    </SectionContainer>
-  </div>
+        <Projects />
+      </SectionContainer>
+    </div>
   </main>
 </Layout>
