--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,21 +5,15 @@ const currentYear = new Date().getFullYear();
 <footer
   class="opacity-80 m-4 mt-16 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex justify-center"
 >
-  <div
-    class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4"
-  >
-    <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
-      >© {currentYear}
-      <span class="">Alex Galo</span>
+<div class="rounded-lg w-full max-w-screen-xl mx-auto flex items-center justify-between py-4">
+    <span class="text-sm text-center text-zinc-800/90 dark:text-zinc-200/90">
+      © {currentYear} <span class="">Alex Galo</span>
     </span>
-    <ul
-      class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
-    >
-      <a
-        id="contacto"
-        href="mailto:alexgalo246@gmail.com"
-        class="hover:underline">Email</a
-      >
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0">
+      <li>
+        <a id="contacto" href="mailto:alexgalo246@gmail.com" class="hover:underline">Email</a>
+      </li>
     </ul>
   </div>
+  
 </footer>
